# cgal

./: CMakeLists.txt
Installation/: CMakeLists.txt
Installation/cmake/modules/: CGAL_SetupDependencies.cmake
Installation/src/: CMakeLists.txt
Installation/src/CGAL/: CMakeLists.txt
